--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=task-management-app
 
 # ??????????
-spring.datasource.url=jdbc:postgresql://postgres:5432/recruit
+spring.datasource.url=jdbc:postgresql://postgres:5432/eventshare
 spring.datasource.username=admin
 spring.datasource.password=password
 
