--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Spotlight-app
 spring.datasource.url=jdbc:postgresql://postgres:5432/eventshare
 spring.datasource.username=admin
 spring.datasource.password=password
-#JPA
+#JPA(Repositoryインタフェースに定義するだけで、指定した条件に一致するEntityを取得することが出来る)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
