--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Spotlight-app
 #PostgresSQLを使用
-spring.datasource.url=jdbc:postgresql://postgres:5432/eventshare
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventshare
 spring.datasource.username=admin
 spring.datasource.password=password
 #JPA(Repositoryインタフェースに定義するだけで、指定した条件に一致するEntityを取得することが出来る)
