add cors front totunageruyou

--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -3,11 +3,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
 #JPA設定
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
+spring.jpa.open-in-view=false
 #H2コンソール
 spring.h2.console.enabled=true
+logging.level.org.springframework.security=DEBUG
+spring.jackson.serialization.write-dates-as-timestamps=false
