security config refact js css

--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
 logging.level.org.springframework.security=DEBUG
 spring.jackson.serialization.write-dates-as-timestamps=false
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/**
+spring.web.resources.add-mappings=true
