--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.web.resources.add-mappings=true
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+# faviconを無効化
+spring.mvc.favicon.enabled=false
